--- a/src/static/style/header.scss
+++ b/src/static/style/header.scss
@@ -8,6 +8,13 @@ header {
     display: flex;
     justify-content: space-between;
     padding: 0rem 1rem;
+    opacity: 1;
+    transform: translate(0px, 0px);
+    transition: all 0.3s ease;
+    &.--hidden {
+      opacity: 0;
+      transform: translate(0px, -100px);
+    }
     a,
     button {
       font-size: 3rem;
