--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -25,9 +25,7 @@
       &.--on {
         z-index: 0;
         opacity: 1;
-        video,
-        h2,
-        .slider__progress {
+        video {
           display: block;
         }
       }
@@ -43,7 +41,7 @@
       }
       h2 {
         position: relative;
-        display: none;
+        transition: opacity 0.3s ease;
       }
     }
   }
@@ -53,10 +51,19 @@
   bottom: 1rem;
   left: 1rem;
   z-index: 3;
+  opacity: 1;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  transform: translate(0px);
+  &.--hidden {
+    opacity: 0;
+    transform: translate(0px, 100px);
+  }
   &.--centered {
+    opacity: 1;
     bottom: 50%;
     left: 50%;
     transform: translate(-50%, 50%);
+    transition: opacity 0s ease, transform 0s ease;
   }
   li {
     display: inline-block;
@@ -108,6 +115,9 @@
   z-index: 3;
   margin-top: -15px;
   cursor: pointer;
+  opacity: 1;
+  transition: all 0.3s ease;
+  transform: translate(0px, 0px);
   &:focus {
     outline: 0;
   }
@@ -119,8 +129,16 @@
   }
   &.--prev {
     left: 0.5rem;
+    &.--hidden {
+      opacity: 0;
+      transform: translate(-100px, 0px);
+    }
   }
   &.--next {
     right: 0.5rem;
+    &.--hidden {
+      opacity: 0;
+      transform: translate(100px, 0px);
+    }
   }
 }
