--- a/src/static/style/contact.scss
+++ b/src/static/style/contact.scss
@@ -5,10 +5,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 0rem 0rem 1rem 0rem;
+  padding: 0rem $main-padding $main-padding $main-padding;
   text-align: center;
   .logo {
-    width: calc(100% - 2rem);
+    //width: calc(100% - 4vw);
+    width: 100%;
+    margin: 0 auto;
     svg {
       width: 100%;
     }
@@ -24,12 +26,13 @@
     font-family: Toren Mono;
     margin-bottom: 1rem;
     a {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       text-transform: inherit;
       font-family: Toren Mono;
     }
     &.--small {
       font-size: 1rem;
+      margin-bottom: 0rem;
       a {
         font-size: 1rem;
       }
