--- a/src/static/style/modal.scss
+++ b/src/static/style/modal.scss
@@ -74,7 +74,7 @@
   left: 0rem;
   width: 100%;
   padding: 0rem $main-padding;
-  transition: all 1s ease;
+  transition: all 1s cubic-bezier(0.69, 0, 0.28, 1);
   &.--transition {
     top: 0px;
     transform: translate(0%, 0%);
