--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -37,7 +37,7 @@
         height: 100%;
         object-fit: cover;
         object-position: center;
-        display: none;
+        //display: none;
       }
       .slider__item__content {
         transition: opacity 0.3s ease;
