--- a/src/static/style/contact.scss
+++ b/src/static/style/contact.scss
@@ -7,35 +7,52 @@
   justify-content: space-between;
   padding: 0rem $main-padding $main-padding $main-padding;
   text-align: center;
+  &.--active {
+    .link,
+    .info {
+      opacity: 1;
+    }
+  }
   .logo {
-    //width: calc(100% - 4vw);
     width: 100%;
     margin: 0 auto;
     svg {
       width: 100%;
     }
   }
-  a {
+  .link {
     font-size: 4rem;
     color: black;
     text-transform: uppercase;
     text-decoration: none;
+    opacity: 0;
+    transition: opacity 0.6s ease;
   }
-  div > p {
-    color: black;
-    font-family: Toren Mono;
-    margin-bottom: 1rem;
-    a {
-      font-size: 1.4rem;
-      text-transform: inherit;
+  .info {
+    opacity: 0;
+    transition: opacity 0.6s ease 0.15s;
+    > p {
+      color: black;
       font-family: Toren Mono;
-    }
-    &.--small {
-      font-size: 1rem;
-      margin-bottom: 0rem;
+      margin-bottom: 1rem;
       a {
-        font-size: 1rem;
+        color: black;
+        font-size: 1.4rem;
+        text-transform: inherit;
+        font-family: Toren Mono;
+        text-decoration: none;
+      }
+      &.--small {
+        font-size: 0.9rem;
+        margin-bottom: 0rem;
+        a {
+          color: black;
+          font-size: 0.9rem;
+        }
       }
     }
   }
+  // div > p {
+
+  // }
 }
