--- a/src/static/style/contact.scss
+++ b/src/static/style/contact.scss
@@ -7,6 +7,9 @@
   justify-content: space-between;
   padding: 0rem $main-padding $main-padding $main-padding;
   text-align: center;
+  @media (max-width: 767.98px) {
+    padding: 2rem;
+  }
   &.--active {
     .link,
     .info {
@@ -27,6 +30,9 @@
     text-decoration: none;
     opacity: 0;
     transition: opacity 0.6s ease;
+    @media (max-width: 767.98px) {
+      font-size: 2.5rem;
+    }
   }
   .info {
     opacity: 0;
@@ -52,7 +58,4 @@
       }
     }
   }
-  // div > p {
-
-  // }
 }
