--- a/src/static/style/header.scss
+++ b/src/static/style/header.scss
@@ -4,6 +4,9 @@ header {
   left: 0;
   width: 100%;
   z-index: 3;
+  @media (max-width: 767.98px) {
+    top: 1.5rem;
+  }
   nav {
     display: flex;
     justify-content: space-between;
@@ -11,6 +14,9 @@ header {
     opacity: 1;
     transform: translate(0px, 0px);
     transition: all 0.3s ease;
+    @media (max-width: 767.98px) {
+      padding: 0rem 2rem;
+    }
     &.--hidden {
       opacity: 0;
       transform: translate(0px, -100px);
@@ -20,6 +26,9 @@ header {
       font-size: 4rem;
       text-decoration: none;
       text-transform: uppercase;
+      @media (max-width: 767.98px) {
+        font-size: 2.5rem;
+      }
     }
     button {
       cursor: pointer;
