--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -65,6 +65,10 @@
   opacity: 1;
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform: translate(0px);
+  @media (max-width: 767.98px) {
+    left: 2rem;
+    bottom: 1rem;
+  }
   &.--hidden {
     opacity: 0;
     transform: translate(0px, 100px);
@@ -91,6 +95,9 @@
       color: white;
       font-family: Helvetica;
       cursor: pointer;
+      @media (max-width: 767.98px) {
+        font-size: 2.5rem;
+      }
       &:focus {
         outline: 0;
       }
@@ -102,6 +109,10 @@
         vertical-align: bottom;
         font-size: 2rem;
         line-height: 2rem;
+        @media (max-width: 767.98px) {
+          font-size: 1.5rem;
+          line-height: 1.5rem;
+        }
       }
     }
   }
@@ -144,12 +155,18 @@
       opacity: 0;
       transform: translate(-100px, 0px);
     }
+    @media (max-width: 767.98px) {
+      left: 1rem;
+    }
   }
   &.--next {
     right: calc(#{$main-padding} * 0.8);
     &.--hidden {
       opacity: 0;
       transform: translate(100px, 0px);
+    }
+    @media (max-width: 767.98px) {
+      right: 1rem;
     }
   }
 }
