--- a/src/static/style/text.scss
+++ b/src/static/style/text.scss
@@ -2,8 +2,6 @@ p,
 a,
 span,
 div,
-h1,
-h2,
 h3,
 h4,
 h5,
@@ -14,6 +12,9 @@ button {
   font-size: $main-size;
   line-height: 1.4;
   color: $primary-text;
+  @media (max-width: 767.98px) {
+    font-size: 1.2rem;
+  }
 }
 
 h1,
@@ -21,6 +22,9 @@ h2 {
   font-size: 4rem;
   text-transform: uppercase;
   line-height: 4rem;
+  @media (max-width: 767.98px) {
+    font-size: 2.5rem;
+  }
 }
 
 h1,
