--- a/src/static/style/modal.scss
+++ b/src/static/style/modal.scss
@@ -24,7 +24,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 3;
     width: 100%;
     height: 100vh;
     overflow: hidden;
@@ -32,7 +32,7 @@
   }
 
   .modal__content {
-    z-index: 2;
+    z-index: 3;
     position: relative;
     margin: 0rem auto;
     width: auto;
@@ -49,17 +49,35 @@
       flex-direction: column;
       padding: 1.5rem 2rem 14rem 2rem;
     }
-    p {
-      margin-top: 0.5rem;
-      margin-bottom: 1rem;
-      font-family: Toren Mono;
-      font-size: 1.4rem;
-      @media (max-width: 767.98px) {
-        font-size: 1.2rem;
-      }
-    }
+    // p {
+    //   margin: 0rem;
+    //   font-family: Toren Mono;
+    //   font-size: 1.4rem;
+    //   @media (max-width: 767.98px) {
+    //     font-size: 1.2rem;
+    //   }
+    // }
+    // a {
+    //   text-decoration: underline;
+    // }
     .content {
       width: 60%;
+      position: relative;
+      .content__rich {
+        margin: 0.5rem 0rem 1rem 0rem;
+        p {
+          margin: 0rem;
+          font-family: Toren Mono;
+          font-size: 1.4rem;
+          @media (max-width: 767.98px) {
+            font-size: 1.2rem;
+          }
+        }
+        a {
+          text-decoration: underline;
+          font-family: Toren Mono;
+        }
+      }
       @media (max-width: 767.98px) {
         width: 70%;
       }
@@ -99,12 +117,14 @@
   left: 0rem;
   width: 100%;
   padding: 0rem $main-padding;
-  transition: all 1s cubic-bezier(0.69, 0, 0.28, 1);
+  transition: top 1s cubic-bezier(0.69, 0, 0.28, 1),
+    transform 1s cubic-bezier(0.69, 0, 0.28, 1);
   @media (max-width: 767.98px) {
     top: calc(100% - 2rem);
     padding: 0 2rem;
   }
   &.--transition {
+    z-index: 5;
     top: 0px;
     transform: translate(0%, 0%);
     @media (max-width: 767.98px) {
@@ -129,7 +149,7 @@
   position: fixed;
   z-index: 2;
   &.--transition {
-    z-index: 3;
+    z-index: 4;
     opacity: 1;
     transition: opacity 0.6s ease;
   }
