--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -37,23 +37,11 @@
         height: 100%;
         object-fit: cover;
         object-position: center;
-        //display: none;
       }
       .slider__item__content {
         transition: opacity 0.3s ease;
-        width: 30vw;
-        // .gatsby-image-wrapper {
-
-        // }
+        width: 23vw;
       }
-      // h2 {
-      //   position: relative;
-      //   transition: opacity 0.3s ease;
-      // }
-      // .logo__project {
-      //   width: 300px;
-      //   transition: opacity 0.3s ease;
-      // }
     }
   }
 }
@@ -140,6 +128,9 @@
   opacity: 1;
   transition: all 0.3s ease;
   transform: translate(0px, 0px);
+  @media (max-width: 575.98px) {
+    margin-top: -10px;
+  }
   &:focus {
     outline: 0;
   }
@@ -147,7 +138,10 @@
     width: 30px;
     height: 30px;
     fill: white;
-    //transition: fill 0.4s ease-out;
+    @media (max-width: 575.98px) {
+      width: 20px;
+      height: 20px;
+    }
   }
   &.--prev {
     left: calc(#{$main-padding} * 0.8);
