--- a/src/static/style/text.scss
+++ b/src/static/style/text.scss
@@ -1,4 +1,3 @@
-p,
 a,
 span,
 div,
@@ -15,6 +14,21 @@ button {
   @media (max-width: 767.98px) {
     font-size: 1.2rem;
   }
+  @media (max-width: 575.98px) {
+    font-size: 1.4rem;
+  }
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 1.4;
+  color: $primary-text;
+  @media (max-width: 767.98px) {
+    font-size: 1.2rem;
+  }
+  @media (max-width: 575.98px) {
+    font-size: 1.4rem;
+  }
 }
 
 h1,
@@ -24,6 +38,7 @@ h2 {
   line-height: 4rem;
   @media (max-width: 767.98px) {
     font-size: 2.5rem;
+    line-height: 2.5rem;
   }
 }
 
