--- a/src/static/style/text.scss
+++ b/src/static/style/text.scss
@@ -37,6 +37,10 @@ h2 {
   text-transform: uppercase;
   line-height: 4rem;
   @media (max-width: 767.98px) {
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+  }
+  @media (max-width: 575.98px) {
     font-size: 2.5rem;
     line-height: 2.5rem;
   }
