--- a/src/static/style/header.scss
+++ b/src/static/style/header.scss
@@ -28,11 +28,11 @@ header {
       text-transform: uppercase;
       @media (max-width: 767.98px) {
         font-size: 1.8rem;
-        line-height: 1.8rem;
+        line-height: 1;
       }
       @media (max-width: 575.98px) {
         font-size: 2.5rem;
-        line-height: 2.5rem;
+        line-height: 1;
       }
     }
     button {
