--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -46,6 +46,13 @@
         }
       }
     }
+    .slider__title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: opacity 0.3s ease;
+    }
   }
 }
 .slider__indicators {
