--- a/src/static/style/text.scss
+++ b/src/static/style/text.scss
@@ -36,14 +36,14 @@ h1,
 h2 {
   font-size: 4rem;
   text-transform: uppercase;
-  line-height: 4rem;
+  //line-height: 4rem;
   @media (max-width: 767.98px) {
     font-size: 1.8rem;
-    line-height: 1.8rem;
+    //line-height: 1.8rem;
   }
   @media (max-width: 575.98px) {
     font-size: 2.5rem;
-    line-height: 2.5rem;
+    //line-height: 2.5rem;
   }
 }
 
