--- a/src/static/style/text.scss
+++ b/src/static/style/text.scss
@@ -37,6 +37,7 @@ h2 {
   font-size: 4rem;
   text-transform: uppercase;
   //line-height: 4rem;
+  line-height: 1.1;
   @media (max-width: 767.98px) {
     font-size: 1.8rem;
     //line-height: 1.8rem;
