--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -60,14 +60,14 @@
 .slider__logo {
   position: fixed;
   right: $main-padding;
-  bottom: calc(#{$main-padding} * 0.7);
+  bottom: calc(#{$main-padding} * 0.9);
   z-index: 4;
   opacity: 1;
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform: translate(0px);
   @media (max-width: 767.98px) {
     right: 2rem;
-    bottom: 1.2rem;
+    bottom: 1.6rem;
   }
   &.--hidden {
     opacity: 0;
@@ -108,6 +108,7 @@
     transform: translate(-50%, 50%);
     transition: opacity 0s ease, transform 0s ease;
     @media (max-width: 575.98px) {
+      margin-bottom: -1px;
       text-align: center;
       width: 80%;
       left: 10%;
@@ -128,7 +129,7 @@
     button {
       vertical-align: middle;
       font-size: 4rem;
-      //line-height: 1.1;
+      //line-height: 1;
       color: white;
       font-family: Helvetica;
       cursor: pointer;
