--- a/src/static/fonts/fonts.css
+++ b/src/static/fonts/fonts.css
@@ -4,7 +4,7 @@
   font-style: normal;
   src: url("HelveticaNeueLTStd-Roman.woff") format("woff"),
     url("HelveticaNeueLTStd-Roman.woff2") format("woff2");
-  font-display: swap;
+  font-display: fallback;
 }
 
 @font-face {
@@ -13,5 +13,5 @@
   font-style: normal;
   src: url("Toren-Mono.woff") format("woff"),
     url("Toren-Mono.woff2") format("woff2");
-  font-display: swap;
+  font-display: fallback;
 }
