--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -55,6 +55,7 @@
   z-index: 3;
   transform: translate(-50%, -50%);
   transition: opacity 0.3s ease;
+  cursor: pointer;
 }
 
 .slider__logo {
@@ -79,7 +80,7 @@
       width: 25vw;
     }
     @media (max-width: 575.98px) {
-      width: 6vw;
+      width: 35vw;
     }
   }
 }
@@ -92,6 +93,7 @@
   opacity: 1;
   transition: opacity 0.3s ease, transform 0.3s ease;
   transform: translate(0px);
+  display: none;
   @media (max-width: 767.98px) {
     left: 2rem;
     bottom: 1rem;
@@ -101,6 +103,7 @@
     transform: translate(0px, 100px);
   }
   &.--centered {
+    display: block;
     text-align: centered;
     opacity: 1;
     bottom: 50%;
