focus slider title none

--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -56,6 +56,9 @@
   transform: translate(-50%, -50%);
   transition: opacity 0.3s ease;
   cursor: pointer;
+  &:focus {
+    outline: 0;
+  }
 }
 
 .slider__logo {
