--- a/src/static/style/slider.scss
+++ b/src/static/style/slider.scss
@@ -4,6 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  touch-action: manipulation;
   .slider__container {
     position: absolute;
     top: 0;
@@ -56,6 +57,12 @@
   transform: translate(-50%, -50%);
   transition: opacity 0.3s ease;
   cursor: pointer;
+  @media (max-width: 767.98px) {
+    left: 10%;
+    width: 80%;
+    transform: translate(0%, -50%);
+    text-align: center;
+  }
   &:focus {
     outline: 0;
   }
